# ChangeLog for net-mail/checkgmail
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -checkgmail-1.12.ebuild:
  Drop old version

  25 May 2008; Joel Cunningham (slithy) <uber.leoj@gmail.com>
  +checkgmail-1.13.ebuild:
  New Ebuild for bug 117867

  20 Oct 2007; Jakub Moc <jakub@gentoo.org> checkgmail-1.12.ebuild:
  Fix die message

  19 Oct 2007; Markus Ullmann <jokey@gentoo.org> -checkgmail-1.10.1.ebuild:
  Drop old

  20 Sep 2007; Joel Cunningham (slithy) <uber.leoj@gmail.com>
  checkgmail-1.12.ebuild:
  Updated libsexy dep to include version without serious bug

  20 Sep 2007; Joel Cunningham (slithy) <uber.leoj@gmail.com>
  checkgmail-1.12.ebuild:
  Updated ebuild for version 1.12

  19 Feb 2007; David Grant (dgrant) <davidgrant@gmail.com>
  +checkgmail-1.10.1.ebuild, +metadata.xml:
  new ebuild for checkgmail, Bug #117867
