@@ -1,4 +1,4 @@
 DIST checkgmail-1.13.tar.bz2 58388 RMD160 f3a89ca6cde0499a70e14e91e988e20f0064d911 SHA1 d4b928838746975608803a79c258872b0dc8ccf9 SHA256 af191b34fd70748b050cdd233d3153e0cc5a334a72fc9a46519bbbecdb295e5d
 EBUILD checkgmail-1.13.ebuild 953 RMD160 acbce2d0cd8ed7814001715391012b3acc3f4283 SHA1 55e896a9753b3794cf336582dc8794f6f4d867b1 SHA256 81f4b64d74436997a2de47ca0f6ef2516b0ebc701beb330e8d0b1da293d1f564
-MISC ChangeLog 937 RMD160 d20c353467503f5add92b8ec8d03f4717d37f5f2 SHA1 07d5a45f75b1ece54165f7f3c36313a578f9b943 SHA256 a20e76f75af4dd9475ac69c4b6cffaf5443b08d3ea03a464cbd48dcaef03d4ec
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 1058 RMD160 43ec312ee8f61da309f7e475930d59cfb2282517 SHA1 92227b6823fa529c617a01110a8a692199f20c9a SHA256 a3a3bf2dff30cbd661915d89685c4df2763c6886eae8a0c7b9a62ff873d792d4
+MISC metadata.xml 364 RMD160 575f2525a4346658dc3f28a24a11047912cd8f04 SHA1 2410e1245cee09536c83cb121228006657b11ba6 SHA256 aec82aef65150ce3cea8a61dd1d31b4a3c2f6e3877661137941bace55efd5969
