@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>maintainer-wanted</herd>
+	<herd>maintainer-wanted</herd>
+	<use>
+		<flag name='clickurl'> Add support to click urls in the 
+			popup notification </flag>
+		<flag name='savepwd'> Add support for saving and 
+			encrypting GMail password </flag>
+	</use>
 </pkgmetadata>
