@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
+  Add local useflags to metadata.xml (GLEP 56)
+
   25 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   -checkgmail-1.12.ebuild:
   Drop old version
